<resources>
    <string name="app_name">Appointment App</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_text2">Nice to see you again!</string>
    <string name="login_button">Login</string>
    <string name="login_register">Register</string>
    <string name="login_not_memeber">You are not a member ?</string>
    <string name="login_text">Hello There!</string>
    <string name="login_botton">Login</string>
    <string name="login_username_hint">someone</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_checkbox">Remember Me</string>
    <string name="login_username_hint_error">Enter a username</string>
    <string name="login_pass_hint_error">Enter a password</string>
    <string name="signup_signup">SIGN UP!</string>
    <string name="signup_mobileno">Enter your Mobile number</string>
    <string name="signup_email">eg:someone2836</string>
    <string name="signup_password">Password</string>
    <string name="signup_button">Create</string>
    <string name="sign_up">Enter your Name</string>
    <string name="signup_dsmail">\@dsmail.com</string>
    <string name="title_activity_sample">sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="login_dsmail.com">\@dsmail.com</string>
    <string name="OTPverification_text">OTP Verification!</string>
    <string name="OTPverification_button">Verify</string>
    <string name="OTPverification_hint">Enter OTP here</string>
    <string name="Step1">Step 1/3</string>
    <string name="phonenumber">Enter Your Phone Number!</string>
    <string name="phonenumber_Hint">721880XXXX</string>
    <string name="phonenumber_button">Proceed</string>
    <string name="step_Otp">Step 2/3</string>
    <string name="sigup_step">Step 3/3</string>
    <string name="SignUp_create_emailid">Create a username</string>
    <string name="Signup_Createpassword">Create a Password</string>
    <string name="phonenumner_otp_msg">We will send you a One time SMS message</string>
    <string name="Otppage_enterotp">Enter the six digit OTP</string>
    <string name="menupage_signout">Sign Out</string>
    <string name="copyriight">©Darshan Udagire</string>
    <string name="navigation_title_appoinment">Appoinments</string>
    <string name="navigation_title_settings">Settings</string>
</resources>
