<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homenav"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/green"/>
    <item
        android:id="@+id/notinav"
        android:icon="@drawable/baseline_event_black_24dp"
        android:title="@string/navigation_title_appoinment"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />
    <item
        android:id="@+id/settingnav"
        android:icon="@drawable/ic_settings"
        android:title="@string/navigation_title_settings"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />
</menu>